base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-deployment
  labels:
    app: target
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target
  template:
    metadata:
      labels:
        app: target
    spec:
      containers:
      - name: service
        image: shivamnagar/echo-relay:nightly
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources: 
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 40Mi
