base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: target
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
